<resources>
    <string name="app_name">Mealer</string>
    <string name="app_logo" />
    <string name="have_an_account">Have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="card_number">Card Number</string>
    <string name="cookButton">Cook</string>
    <string name="clientButton">Client</string>
    <string name="ClientButton">Client</string>
    <string name="you_re_logged_in_as">You’re Logged in as</string>
    <string name="client">CLIENT</string>
    <string name="suspend_cook">Suspend cook</string>
    <string name="delete_complaint">Delete complaint</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="suspend">Suspend</string>
    <string name="cookname">CookName</string>
    <string name="choose_suspension_date">Choose suspension date</string>
    <string name="permanent_suspension">Permanent Suspension</string>
    <string name="temporary_suspension">Temporary Suspension</string>
    <string name="search_hint">Search for a meal...</string>
    <string name="Cart_button" />
    <string name="CartButton">Cart</string>
    <string name="BagButton">Bag</string>
</resources>