<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cooksuspention"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#023047"
    tools:context=".CookSuspension">

    <TextView
        android:id="@+id/SuspensionTitle"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="661dp"
        android:fontFamily="@font/jomhuria"
        android:text="@string/choose_suspension_date"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/suspensionDate"
        android:layout_width="372dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="596dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/jomhuria"
        android:hint="@string/mm_dd_yyyy"
        android:inputType="date|textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SuspensionTitle" />

    <Button
        android:id="@+id/buttonsuspension"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:layout_marginStart="214dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="519dp"
        android:text="@string/temporary_suspension"
        app:backgroundTint="#FB8500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsuspension2"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="519dp"
        android:text="@string/permanent_suspension"
        app:backgroundTint="#FB8500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>