<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B8CA3">


    <ImageView
        android:id="@+id/logo2"
        android:layout_width="187dp"
        android:layout_height="67dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="627dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        app:srcCompat="@drawable/logo2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/cook_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/jomhuria"
        android:text="Cook"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/Login_option"
        app:layout_constraintEnd_toStartOf="@+id/client_role"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/client_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/jomhuria"
        android:text="Client"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/Login_option"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Login_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/jomhuria"
        android:text="Have an account?  "
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookButton" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/jomhuria"
        android:onClick="onLogInClick"
        android:text="LOG IN"
        android:textColor="#FFEB3B"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ClientButton" />

    <ImageButton
        android:id="@+id/cookButton"
        android:layout_width="100dp"
        android:layout_height="91dp"
        android:layout_marginTop="112dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/cookButton"
        android:onClick="onChefClick"
        android:text="@string/cookButton"
        app:layout_constraintEnd_toStartOf="@+id/ClientButton"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:srcCompat="@drawable/chef1" />

    <ImageButton
        android:id="@+id/ClientButton"
        android:layout_width="112dp"
        android:layout_height="99dp"
        android:layout_marginTop="104dp"
        android:background="@color/cardview_shadow_end_color"
        android:contentDescription="@string/clientButton"
        android:onClick="onClientClick"
        android:text="@string/ClientButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2"
        app:srcCompat="@drawable/image2" />

</androidx.constraintlayout.widget.ConstraintLayout>